# CodeResearcher

./: README.md
docs/: free-vs-paid.md  integration-guide.md
examples/: langchain_planner_pipeline.py  langchain_react_agent.py
javascript/: .env.example  README.md  cli.ts  package.json  tsconfig.json
javascript/src/: config.ts  index.ts  searcher.ts
javascript/src/sources/: github.ts  grepApp.ts
python/: .env.example  README.md  cli.py  pyproject.toml
python/code_researcher/: __init__.py  config.py  langchain_tool.py  searcher.py
python/code_researcher/sources/: __init__.py  github.py  grep_app.py  stackoverflow.py
rust/: .env.example  Cargo.toml  README.md
rust/src/: config.rs  lib.rs  main.rs  searcher.rs
rust/src/sources/: github.rs  grep_app.rs  mod.rs
