[package]
name = "code-researcher"
version = "1.0.0"
edition = "2021"
description = "Search GitHub for real code examples and inject them into LLM prompts"
license = "MIT"
keywords = ["llm", "github", "code-search", "ai", "agents"]

[[bin]]
name = "code-researcher"
path = "src/main.rs"

[lib]
name = "code_researcher"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
urlencoding = "2.1"
